# revolution-now

./: .clang-format  .clang-tidy  .clangd  .config.mk  .gitignore  .gitmodules  .lua-format  .session.vim  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  compile_commands.json  configure  edit  harbor-view.cpp  matrix.hpp  notes.txt
exe/: CMakeLists.txt  main.cpp  main.rds
src/: CMakeLists.txt  Makefile  adt.cpp  adt.hpp  agents.cpp  agents.hpp  ai-native-agent.cpp  ai-native-agent.hpp  ai-native-mind.cpp  ai-native-mind.hpp  alarm.cpp  alarm.hpp  alarm.rds  aliases.hpp  analysis.cpp  analysis.hpp  anim-builder.cpp  anim-builder.hpp  anim-builder.rds  anim-builders.cpp  anim-builders.hpp  anim-builders.rds  anim.cpp  anim.hpp  ansi.hpp  app-ctrl.cpp  app-ctrl.hpp  app-state.cpp  app-state.hpp  ascii-map.cpp  ascii-map.hpp  attack-handlers.cpp  attack-handlers.hpp  auto-complete.cpp  auto-complete.hpp  auto-pad.cpp  auto-pad.hpp  auto-save.cpp  auto-save.hpp  autosave.cpp  (+900 more)
src/base/: CMakeLists.txt  adl-tag.hpp  ansi.hpp  any-util.hpp  assoc-queue.hpp  attributes.hpp  auto-field.hpp  binary-data.cpp  binary-data.hpp  build-properties.cpp  build-properties.hpp  cc-specific.cpp  cc-specific.hpp  cli-args.cpp  cli-args.hpp  co-compat.hpp  co-maybe.hpp  config.hpp  conv.cpp  conv.hpp  coro-compat.hpp  ct-string.hpp  empty.cpp  env.cpp  env.hpp  error.cpp  error.hpp  expect.cpp  expect.hpp  fixed-string.hpp  flag.hpp  fmt-to-str.hpp  fmt.hpp  fs.cpp  fs.hpp  func-concepts.hpp  function-ref.hpp  generator-combinators.hpp  generator.hpp  hash.hpp  (+54 more)
src/capnp/: CMakeLists.txt  testing.capnp
src/cdr/: CMakeLists.txt  converter.cpp  converter.hpp  error.cpp  error.hpp  ext-base.cpp  ext-base.hpp  ext-builtin.cpp  ext-builtin.hpp  ext-std.cpp  ext-std.hpp  ext.hpp  merge.cpp  merge.hpp  repr.cpp  repr.hpp
src/cl/: CMakeLists.txt  ext-parse.cpp  ext-parse.hpp  model.cpp  model.hpp  parse-fast.cpp  parse-fast.hpp  parse.cpp  parse.hpp
src/config/: CMakeLists.txt  cheat.rds  colony-constants.hpp  colony-enums.rds  colony.cpp  colony.hpp  colony.rds  combat.rds  command.hpp  command.rds  commodity.rds  debug.rds  fathers.hpp  fathers.rds  gfx.rds  harbor.cpp  harbor.hpp  harbor.rds  immigration.hpp  immigration.rds  input.rds  land-view.cpp  land-view.rds  lcr.cpp  lcr.hpp  lcr.rds  map-gen-types.cpp  map-gen-types.hpp  map-gen-types.rds  map-gen.cpp  map-gen.hpp  map-gen.rds  market.cpp  market.hpp  market.rds  menu-item-fwd.hpp  menu-items.rds  menu.cpp  menu.rds  missionary.cpp  (+57 more)
src/cpp-lua/: CMakeLists.txt  lua.cpp  lua.hpp
src/fb/: CMakeLists.txt  cargo.fbs  colony-mfg.fbs  colony.fbs  color.fbs  commodity.fbs  coord.fbs  g-unit-state.fbs  id.fbs  land-square.fbs  land-view.fbs  monster.fbs  mv-points.fbs  nation.fbs  orders.fbs  physics.fbs  plane.fbs  player.fbs  save-game.fbs  sg-colony.fbs  sg-europort-view.fbs  sg-id.fbs  sg-land-view.fbs  sg-old-world-view.fbs  sg-plane.fbs  sg-player.fbs  sg-terrain.fbs  sg-turn.fbs  sg-unit-state.fbs  sg-unit.fbs  terrain.fbs  testing.fbs  unit-composer.fbs  unit.fbs  utype.fbs  viewport.fbs  vocab.fbs
src/gfx/: CMakeLists.txt  aspect.cpp  aspect.hpp  aspect.rds  cartesian.cpp  cartesian.hpp  cartesian.rds  cdr-matrix.hpp  compatibility.hpp  coord.cpp  coord.hpp  coord.rds  image-analysis.cpp  image-analysis.hpp  image.cpp  image.hpp  iter.cpp  iter.hpp  logical-impl.rds  logical.cpp  logical.hpp  logical.rds  matrix-fwd.hpp  matrix.hpp  monitor.cpp  monitor.hpp  monitor.rds  pixel.cpp  pixel.hpp  resolution-enum.cpp  resolution-enum.hpp  resolution-enum.rds  resolution.cpp  resolution.hpp  resolution.rds  spread-algo.cpp  spread-algo.hpp  spread-algo.rds
src/gl/: CMakeLists.txt  attribs.cpp  attribs.hpp  bindable.hpp  error.cpp  error.hpp  framebuffer.cpp  framebuffer.hpp  iface-glad.cpp  iface-glad.hpp  iface-logger.cpp  iface-logger.hpp  iface-mock.cpp  iface-mock.hpp  iface.cpp  iface.hpp  index-buffer.cpp  index-buffer.hpp  init.cpp  init.hpp  misc.cpp  misc.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  types.hpp  uniform.cpp  uniform.hpp  vertex-array.cpp  vertex-array.hpp  vertex-buffer.cpp  vertex-buffer.hpp
src/gs/: CMakeLists.txt  cargo.cpp  cargo.hpp  cargo.rds  colonies.cpp  colonies.hpp  colonies.rds  colony-id.hpp  colony.cpp  colony.hpp  colony.rds  events.hpp  fathers.cpp  fathers.hpp  fathers.rds  land-view.cpp  land-view.hpp  map-square.cpp  map-square.hpp  map-square.rds  matrix.hpp  mv-points.hpp  nation.rds  old-world-state.cpp  old-world-state.hpp  old-world-state.rds  player.cpp  player.rds  players.cpp  players.rds  root.cpp  root.hpp  root.rds  settings.cpp  settings.hpp  settings.rds  ss.cpp  ss.hpp  terrain.cpp  terrain.hpp  (+16 more)
src/lua/: .luarc.json  cheat.lua  colony-mgr.lua  europort.lua  global.lua  land-view.lua  map-gen.lua  meta.lua  new-game.lua  new_game.lua  populate.lua  startup.lua  test.lua  ustate.lua  util.lua  wait.lua  waitable.lua
src/luapp/: CMakeLists.txt  any.cpp  any.hpp  as.cpp  as.hpp  c-api.cpp  c-api.hpp  call.cpp  call.hpp  cast.cpp  cast.hpp  cdr.cpp  cdr.hpp  cthread.hpp  enum.cpp  enum.hpp  error.cpp  error.hpp  ext-base.hpp  ext-monostate.cpp  ext-monostate.hpp  ext-refl.hpp  ext-std.cpp  ext-std.hpp  ext-userdata.hpp  ext-usertype.hpp  ext.cpp  ext.hpp  func-push.cpp  func-push.hpp  iter.cpp  (+45 more)
test/: CMakeLists.txt  agents-test.cpp  ai-native-agent-test.cpp  ai-native-mind-test.cpp  alarm-test.cpp  alarm.cpp  anim-builder-test.cpp  anim-builder.cpp  anim-builders-test.cpp  anim-builders.cpp  ascii-map-test.cpp  attack-handlers-test.cpp  attack-handlers.cpp  auto-complete-test.cpp  auto-pad-test.cpp  auto-save-test.cpp  autosave-test.cpp  biomes-test.cpp  camera-test.cpp  capture-cargo-test.cpp  cargo.cpp  catch-common.hpp  charter-test.cpp  cheat-test.cpp  cheat.cpp  classic-sav-test.cpp  co-combinator-test.cpp  co-combinator.cpp  co-lua-test.cpp  co-lua.cpp  co-maybe.cpp  colonies-turn-test.cpp  colony-buildings-test.cpp  colony-buildings.cpp  colony-evolve-test.cpp  colony-evolve.cpp  colony-mgr-test.cpp  colony-mgr.cpp  color-cycle-test.cpp  color.cpp  (+254 more)
(+2326 files in other folders)
